@@ -37,6 +37,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 469049  link failure on ppc64 (big endian) valgrind 3.20
 469146  massif --ignore-fn does not ignore inlined functions
 469768  Make it possible to install gdb scripts in a different location
+470121  Can't run callgrind_control with valgrind 3.21.0 because of perl errors
 470520  Multiple realloc zero errors crash in MC_(eq_Error)
 470713  Failure on the Yosys project: valgrind: m_libcfile.c:1802
         (Bool vgPlain_realpath(const HChar *, HChar *)): Assertion 'resolved' failed
